# git_harjoitus

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: hello.h
src/: hello.cpp
tests/: test_hello.cpp
